# near_me

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
artifacts/api-server/src/: index.ts
artifacts/api-server/src/lib/: crossPlatformDedupe.ts  fetchWithRetry.ts  normalize.ts  scheduler.ts  scraperRunner.ts  seed.ts  validation.ts
artifacts/events-hub/: index.html  package.json
artifacts/events-hub/.replit-artifact/: artifact.toml
artifacts/events-hub/src/: App.tsx  index.css
attached_assets/: Pasted--MASTER-FIX-UPGRADE-PROMPT-FINAL-WITH-DESCRIPTION-FULL-_1777377525245.txt  Pasted-Build-a-full-stack-web-application-that-aggregates-tech_1777353025148.txt  Pasted-You-are-extending-an-existing-full-stack-event-aggregat_1777358906107.txt  Pasted-You-are-extending-an-existing-full-stack-event-aggregat_1777376174391.txt  Pasted-You-are-updating-an-existing-full-stack-event-aggregati_1777357682293.txt  Pasted-You-are-updating-an-existing-full-stack-project-that-al_1777367554446.txt  Pasted-You-are-updating-an-existing-multi-source-event-scrapin_1777372907838.txt
lib/api-spec/: openapi.yaml
python-scraper/: README.md  main.py  requirements.txt
python-scraper/db/: database.py
python-scraper/models/: event_model.py  geocode_cache.py  raw_event.py
python-scraper/scrapers/: base.py  devfolio_scraper.py  devpost_scraper.py  eventbrite_scraper.py  hackerearth_scraper.py  luma_scraper.py  mlh_scraper.py  unstop_scraper.py
python-scraper/services/: aggregator.py  dedupe.py  filter.py  geocode.py  normalize.py  scheduler.py
(+21 files in other folders)
